可重复读Request直接使用spring的ContentCachingRequestWrapper